create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -491,6 +491,46 @@ h6,
 #features1-f .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #2e2e2e;
 }
+#header3-i .mbr-section-title,
+#header3-i .mbr-section-subtitle {
+  text-align: center;
+}
+#content5-h .mbr-section-title,
+#content5-h p {
+  color: #fff;
+}
+#content5-j .mbr-section-title,
+#content5-j p {
+  color: #fff;
+}
+#content5-k .mbr-section-title,
+#content5-k p {
+  color: #fff;
+}
+#content5-l .mbr-section-title,
+#content5-l p {
+  color: #fff;
+}
+#content5-m .mbr-section-title,
+#content5-m p {
+  color: #fff;
+}
+#content5-n .mbr-section-title,
+#content5-n p {
+  color: #fff;
+}
+#content5-o .mbr-section-title,
+#content5-o p {
+  color: #fff;
+}
+#content5-p .mbr-section-title,
+#content5-p p {
+  color: #fff;
+}
+#content5-q .mbr-section-title,
+#content5-q p {
+  color: #fff;
+}
 #msg-box6-4 .mbr-section-title,
 #msg-box6-4 .lead p {
   color: #fff;
