create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -61,3 +61,75 @@
   font-size: 15px;
   font-family: 'Lora', serif;
 }
+#header3-c H3 {
+  text-align: center;
+}
+#header3-f H3 {
+  text-align: center;
+}
+#content5-d .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-d .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-d .mbr-article {
+  color: #fff;
+}
+#content5-g .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-g .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-g .mbr-article {
+  color: #fff;
+}
+#content5-h .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-h .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-h .mbr-article {
+  color: #fff;
+}
+#content5-i .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-i .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-i .mbr-article {
+  color: #fff;
+}
+#content5-j .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-j .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-j .mbr-article {
+  color: #fff;
+}
+#content5-k .mbr-header .mbr-header__text {
+  text-align: center;
+  color: #fff;
+}
+#content5-k .mbr-header .mbr-header__subtext {
+  text-align: center;
+  color: #fff;
+}
+#content5-k .mbr-article {
+  color: #fff;
+}
