create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -513,124 +513,12 @@ h6,
 #header3-i .mbr-section-subtitle {
   text-align: center;
 }
-#content5-h .mbr-section-title,
-#content5-h p {
+#content5-14 .mbr-section-title,
+#content5-14 p {
   color: #fff;
 }
-#content5-h .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-h .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-h .mbr-article {
-  color: #fff;
-}
-#content5-j .mbr-section-title,
-#content5-j p {
-  color: #fff;
-}
-#content5-j .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-j .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-j .mbr-article {
-  color: #fff;
-}
-#content5-k .mbr-section-title,
-#content5-k p {
-  color: #fff;
-}
-#content5-k .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-k .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-k .mbr-article {
-  color: #fff;
-}
-#content5-l .mbr-section-title,
-#content5-l p {
-  color: #fff;
-}
-#content5-l .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-l .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-l .mbr-article {
-  color: #fff;
-}
-#content5-m .mbr-section-title,
-#content5-m p {
-  color: #fff;
-}
-#content5-m .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-m .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-m .mbr-article {
-  color: #fff;
-}
-#content5-n .mbr-section-title,
-#content5-n p {
-  color: #fff;
-}
-#content5-n .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-n .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-n .mbr-article {
-  color: #fff;
-}
-#content5-o .mbr-section-title,
-#content5-o p {
-  color: #fff;
-}
-#content5-o .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-o .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-o .mbr-article {
-  color: #fff;
-}
-#content5-p .mbr-section-title,
-#content5-p p {
-  color: #fff;
-}
-#content5-p .mbr-header .mbr-header__text {
-  text-align: center;
-  color: #fff;
-}
-#content5-p .mbr-header .mbr-header__subtext {
-  text-align: center;
-  color: #fff;
-}
-#content5-p .mbr-article {
+#content5-15 .mbr-section-title,
+#content5-15 p {
   color: #fff;
 }
 #content5-q .mbr-section-title,
@@ -646,6 +534,30 @@ h6,
   color: #fff;
 }
 #content5-q .mbr-article {
+  color: #fff;
+}
+#content5-16 .mbr-section-title,
+#content5-16 p {
+  color: #fff;
+}
+#content5-17 .mbr-section-title,
+#content5-17 p {
+  color: #fff;
+}
+#content5-18 .mbr-section-title,
+#content5-18 p {
+  color: #fff;
+}
+#content5-19 .mbr-section-title,
+#content5-19 p {
+  color: #fff;
+}
+#content5-1a .mbr-section-title,
+#content5-1a p {
+  color: #fff;
+}
+#content5-1b .mbr-section-title,
+#content5-1b p {
   color: #fff;
 }
 #msg-box8-v .mbr-section-title,
